Fixed bugs for night and dark mode, and finished MediMate Doctors Office Room

--- a/MediMate_frontend/src/assets/frontend/_doctors-office.scss
+++ b/MediMate_frontend/src/assets/frontend/_doctors-office.scss
@@ -1,26 +1,29 @@
 .office {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 32px;
+    margin-top: 64px;
+    height: auto;
     justify-content: space-between;
     align-items: flex-start;
-    border: 2px solid $primary-color;
-    box-shadow: 0px 3px 30px 2px $primary-color;
-    border-radius: 10px;
+    gap: 16px;
     * {
         margin: 0;
     }
     &__col {
-        width: 50%;
+        width: calc(50% - 16px);
+        box-shadow: 0px 0px 30px 2px $primary-color;
+        animation: Fade 1s ease-in-out;
+        border-radius: 10px;
         display: flex;
+        flex-wrap: wrap;
+        min-width: 300px;
         max-width: 50%;
         padding-top: 20px;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: flex-start;
         gap: 20px;
-    }
-    &__col:first-child {
-        border-right: 1px solid $primary-color;
+        align-self: stretch; // Added to stretch the columns
     }
     &__title-container {
         width: 100%;
@@ -44,11 +47,12 @@
         width: 100%;
         padding: 10px;
         border: 1px solid $primary-color;
+        background-color: #007bff50;
         border-radius: 5px;
     }
     &__dropdown {
         width: calc(100% - 20px);
-        border: 1px solid ;
+        border: 1px solid;
         position: absolute;
         padding: 10px 5px;
         list-style-type: none;
@@ -103,6 +107,7 @@
         width: 100%;
         padding: 10px;
         border: 1px solid $primary-color;
+        background-color: #007bff50;
         border-radius: 5px;
     }
     &__appointment-notes {
@@ -111,7 +116,6 @@
         align-items: center;
         justify-content: flex-start;
         width: 100%;
-
     }
     &__notes-area {
         width: 100%;
@@ -127,5 +131,30 @@
         width: 100%;
         gap: 10px;
         justify-content: space-between;
+    }
+    &__output-container {
+        width: 100%;
+        padding: 10px;
+    }
+    &__output-inner-container {
+        border: 1px solid $primary-color;
+        width: 100%;
+        min-height: 175px;
+        border-radius: 10px;
+        padding: 10px;
+        background-color: white;
+        color: black;
+        align-self: stretch;
+    }
+}
+
+@keyframes Fade {
+    0% {
+        opacity: 0;
+        box-shadow: 0px 0px 0px 0px $primary-color;
+    }
+    100% {
+        opacity: 1;
+        box-shadow: 0px 0px 30px 2px $primary-color;
     }
 }
