--- a/MediMate_frontend/src/assets/frontend/_hero-banner.scss
+++ b/MediMate_frontend/src/assets/frontend/_hero-banner.scss
@@ -17,7 +17,7 @@
         right: 0%;
         width: 53%;
         height: auto;
-        animation: riseAndFadeIn 2.5s ease-in-out;
+        animation: riseAndFadeIn 1.75s ease-in-out;
     }
     &__heading {
         margin-bottom: 20px;
